data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1790.wast
;; 1. **Test Description**:    - **Test Name**: Conditional Branch Before Function Call    - **Description**: Test a `br_if` instruction immediately before a function call to ensure proper stack unwinding and operand checking. The `br_if` should conditionally bypass the function call based on a stack operand.     - **Constraint Check**: Confirms that the correct function is called or skipped based on the branch condition.    - **Improper Handling**: Ensures that incorrect branching does not lead to skipping or incorrectly invoking a function.

(assert_invalid
  (module (func $conditional-branch-before-call
    (block (result i32)
      (br_if 0 (i32.const 0))
      (call $someFunction)
    )
  ))
  "type mismatch"
)